data/derived/comb/progs/unify/prog6190.ml.out
Characters 113-120:
  let args = List.combine(l1,l2) in
                         ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
